# fspathtree

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml  setup.py
fspathtree/: fspathtree.py
src/fspathtree/: fspathtree.py
testing/: pre-tag-release.sh  test_unitTests.py
tests/: test_find.py  test_paths.py  test_unitTests.py  test_update.py
util-scripts/: tag-release.sh
